website/i18n/de/docusaurus-plugin-content-docs/version-15.1/about-the-consoles/fader-wings.md
---
id: fader-wings
title: Fader Wings
sidebar_label: Fader Wings
---

import Keys from '@site/src/components/key.ts';
import Video from '@site/src/components/video.tsx';

"Wings" bieten zusätzliche Bedienelemente wie Fader und Tasten, und sind
je nach Einsatzzweck eine sinnvolle Ergänzung.

## Tiger Touch Wing

Der Tiger Touch Wing bietet 30 zusätzliche Fader/Tasten, die über ein
kleines Display auch jeweils beschriftet werden können. Wie auf dem Pult
auch lassen sich sowohl Geräte darauf patchen als auch Playbacks
(Speicherplätze) darauf speichern. Jede Faderreihe lässt sich unabhängig
auf 60 Seiten umschalten.

![Tiger Touch Wing](/docs/images/Tiger-Touch-Wing.png)

Das Tiger Touch Wing wird über ein USB-Kabel mit dem jeweiligen Pult 
verbunden, außerdem ist ein separater Netzanschluss erforderlich. Das
Wing verfügt über einen integrierten USB-Hub, so dass weitere 2
USB-Anschlüsse z.B. für eine Tastatur und Mouse zur Verfügung stehen.

Das Tiger Touch Wing ist optisch und mechanisch passend zum Tiger Touch
designed worden, kann aber auch mit dem Pearl Expert, Arena oder dem Sapphire
Touch verwendet werden.

## Titan Mobile Wing

Das Titan Mobile Fader Wing stellt zusätzlich zum Pult 20 Fader sowie 30
Macro-/Exekutor-Tasten zur Verfügung. Es wird einfach durch ein
USB-Kabel mit dem Pult (bei Verwendung des Titan Mobile: mit dem
Computer, auf dem die Software läuft) verbunden.

Es hat die gleiche Form wie das Titan Mobile und passt perfekt zu
diesem, kann aber auch mit allen größeren Pulten -- Quartz, Tiger Touch,
Pearl Expert, Arena und Sapphire Touch -- verwendet werden. Ebenso 
kann es mit dem T2 betrieben werden.

Zur Anzeige der Belegung der Fader und Tasten gibt es das Fenster
"Mobile Wing". Um dieses zu öffnen, drücken Sie zweimal auf 
<Keys.HardKey>View/Open</Keys.HardKey> und wählen "Mobile Wing". Mit den 
Kontext-Buttons kann man verschiedene Anzeigearten dieses Fensters wählen, z.B. 
alles zusammen, nur die Fader, nur die Tasten etc.

![Titan Mobile Wing](/docs/images/Titan-Mobile-Wing.png)
