website/i18n/de/docusaurus-plugin-content-docs/version-17.0/about-the-consoles/fader-wings.md
---
id: fader-wings
title: Fader Wings
sidebar_label: Fader Wings
---

import Keys from '@site/src/components/key.ts';
import Video from '@site/src/components/video.tsx';

"Wings" bieten zusätzliche Bedienelemente wie Fader und Tasten, und sind
je nach Einsatzzweck eine sinnvolle Ergänzung.

## T3 Wing

Das T3 Wing ergänzt das Pult um 20 zusätzliche Playbackfadern und 30
Macro/Executor-Tasten. Es wird einfach mit einem USB-Kabel an das Pult bzw. den PC, auf dem die Titan-Software läuft, angeschlossen.

Von der Größe und Form her ist es die ideale Ergänzung zum T3, kann aber auch als Erweiterung 
mit jedem anderen Titan-Pult (ab Version 16) verwendet werden. Ebenso kann es als Faderboard für das T2 dienen.

![T3 Wing](/docs/images/T3-Wing.png)

Zur Anzeige der Belegung der Fader und Tasten auf dem Wing gibt es das Fenster
"Mobile Wing". Um dieses zu öffnen, drücken Sie zweimal 
auf <Keys.HardKey>View/Open</Keys.HardKey> und wählen "Mobile Wing". Mit den 
Kontext-Buttons kann man verschiedene Anzeigearten dieses Fensters wählen, z.B. 
alles zusammen, nur die Fader, nur die Tasten etc.

## Tiger Touch Wing

Der Tiger Touch Wing bietet 30 zusätzliche Fader/Tasten, die über ein
kleines Display auch jeweils beschriftet werden können. Wie auf dem Pult
auch lassen sich sowohl Geräte darauf patchen als auch Playbacks
(Speicherplätze) darauf speichern. Jede Faderreihe lässt sich unabhängig
auf 60 Seiten umschalten.

![Tiger Touch Wing](/docs/images/Tiger-Touch-Wing.png)

Das Tiger Touch Wing wird über ein USB-Kabel mit dem jeweiligen Pult 
verbunden, außerdem ist ein separater Netzanschluss erforderlich. Das
Wing verfügt über einen integrierten USB-Hub, so dass weitere 2
USB-Anschlüsse z.B. für eine Tastatur und Mouse zur Verfügung stehen.

Auf der Rückseite kann man mit einem Schalter einstellen, ob das Wing 
rechts oder links steht. Damit können zwei Wings an eine Konsole angeschlossen werden. 
Die Schalterstellung wird nur beim Einschalten ausgewertet, damit während der Show keine Störungen auftreten.

Das Tiger Touch Wing ist optisch und mechanisch passend zum Tiger Touch
designt worden, kann aber auch mit dem D9, Sapphire Touch, Arena und dem Pearl Expert verwendet werden.

> Wird das Tiger Touch Wing mit dem D9-330 verwendet, so werden die Fader und Tasten 
ganz links auf dem D9 auf das Tiger Touch Wing gespiegelt, haben also die identische Funktion. 

## Titan Mobile Wing

Das Titan Mobile Fader Wing stellt zusätzlich zum Pult 20 Fader sowie 30
Macro-/Exekutor-Tasten zur Verfügung. Es wird einfach durch ein
USB-Kabel mit dem Pult (bei Verwendung des Titan Mobile: mit dem
Computer, auf dem die Software läuft) verbunden.

Es hat die gleiche Form wie das Titan Mobile und passt perfekt zu
diesem, kann aber auch mit allen anderen Titan-Pulten sowie dem T2 betrieben werden.

![Titan Mobile Wing](/docs/images/Titan-Mobile-Wing.png)

Zur Anzeige der Belegung der Fader und Tasten auf dem Wing gibt es das Fenster
"Mobile Wing". Um dieses zu öffnen, drücken Sie zweimal 
auf <Keys.HardKey>View/Open</Keys.HardKey> und wählen "Mobile Wing". Mit den 
Kontext-Buttons kann man verschiedene Anzeigearten dieses Fensters wählen, z.B. 
alles zusammen, nur die Fader, nur die Tasten etc.

> Der Umschalter neben dem USB-Anschluss hat keine Funktion.